<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">World Of WarShips Assistant</string>
    <string name="search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title">Gamer Statictic</string>
    <string name="miles">Miles</string>
    <string name="battles">Battles</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="workwithoutlogin">Work without Login</string>
    <string name="title_activity_login">Sign in</string>

    <string name="action_cat_male">Кот</string>
    <string name="action_cat_female">Кошка</string>
    <string name="action_kitten">Котенок</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="search_pl">Search Player</string>
    <string name="encyclopedia">Encyclopedia</string>
    <string name="title_activity_encyclopedia">EncyclopediaActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authentication">Authentication</string>
    <string name="nickname">"Nickname    "</string>
    <string name="noentry">no entry</string>
    <string name="cabinet">Cabinet</string>
    <string name="logout">Logout</string>
    <string name="freexp_view">Free XP:</string>
    <string name="credites_view_id">Credits</string>
    <string name="gold_view">Gold</string>
    <string name="created_view">Created at</string>
    <string name="last_bat_time_view">Last battle time</string>
    <string name="show_ach_val">Show achievements</string>
    <string name="search_to_compare">Search to compare</string>
    <string name="ser">Search</string>
    <string name="me_id">Me</string>

</resources>
